* Re-engineered schema for financial tables (Chris T)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for LedgerSMB 1.3.4
* Corrected case matching error in upgrade script (Chris T)
* Corrected version number on new databases (Chris T)
* Corrected multiple load errors on upgrade (David B)

Chris T is Chris Travers
David B is David Bandel

Changelog for LedgerSMB 1.3.3
* Fix for being unable to delete AR/AP drafts (Herman V)
* Additional button cleanup (Herman V)
* Fix for is_zero issue with latest Math::BigFloat in AR/AP trans (Chris T)
* Fix for inability to save employee country (Chris T)
* API inconsistency fixed (Chris T)
* Fix for translation string standardization (Herman V)
* Fix for AP posting issue with 1.000,00 number format (Herman V)
* More number format fixes (Herman V)
* Database upgrade within 1.3 now possible from setup.pl (Chris T)
* Corrected Norwegian tax rates (Erik H)

Chris T is Chris Travers
Herman V is Herman Vierendeels
Erik H is Erik Huelsman

Changelog for LedgerSMB 1.3.2
* Fixed a few files where suExec fixes were not applied (Chris T)
* Fixed erroneous buttons marked "Save and Post" showing up (Chris T)
* Corrected test cases so they do not fail w/o optional LaTeX mods (Chris T)
* Made errors saving chart of accounts entry more friendly (Chris T)
* Fixed permissions issue involving yearend (Chris T)
* Fixed filename issue in install.sh (Chris T)
* Fixed stylesheet/salutations display issue in user editing screen (Chris T)
* Correcting LedgerSMB.pot (bug reported by Herman V) (Chris T)
* Documented parameterized translation syntax for .po files (Herman V)
* Added en_GB and en_US to language table for new installations (Chris T)
* Added check for system configuration before tests begin (Chris T)
* Clarified password reset interface for user management (Chris T)
* Added notes on installing on Ubuntu 11.10 (Frans S)
* Correcting some issues with Perl 5.12 and Math::BigInt (Herman V)
