@@ -26,3 +26,4 @@ EndOfYear.sql
 Util.sql
 Assets.sql
 Files.sql
+Fixes.sql
