@@ -63,7 +63,7 @@
            </tr>
       <?lsmb END -?>
 	  <tr valign="top">
-          	<th align="right" colspan="4"> &nbsp; <?lsmb text('TOTAL' ?></th>
+          	<th align="right" colspan="4"> &nbsp; <?lsmb text('TOTAL') ?></th>
           	<td align="center"> <?lsmb header.amount ?>     </td>
           </tr>
  </table>
