@@ -13,9 +13,19 @@ Changelog for LedgerSMB 1.3.4
 * Corrected case matching error in upgrade script (Chris T)
 * Corrected version number on new databases (Chris T)
 * Corrected multiple load errors on upgrade (David B)
+* Corrected problem creating UTF-8 database on Debian (David B)
+* Corrected display issues with numbers (Herman V)
+* Updated Ubuntu notes (Frans S)
+* Corrected a couple of menu items (David B)
+* Added 1.3-1.2 downgrade script to recover from failed upgrades (Chris T)
+* Corrected ship/receive bug due to invalid join conditions (Chris T)
+* Corrected template error in printPayment.html (Herman V)
+* Form.pl now provides instructions to use setup.pl to correct database
+versioning errors (Chris T)
 
 Chris T is Chris Travers
 David B is David Bandel
+Herman V is Herman Vierendeels
 
 Changelog for LedgerSMB 1.3.3
 * Fix for being unable to delete AR/AP drafts (Herman V)
@@ -32,6 +42,7 @@ Changelog for LedgerSMB 1.3.3
 Chris T is Chris Travers
 Herman V is Herman Vierendeels
 Erik H is Erik Huelsman
+Frans S is Frans van der Star
 
 Changelog for LedgerSMB 1.3.2
 * Fixed a few files where suExec fixes were not applied (Chris T)
